--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "git-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "dev": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "2.8.5",
-    "express": "4.17.1"
+    "@octokit/types": "^6.34.0",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "octokit": "^1.7.1",
+    "request": "^2.88.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
